text legibility fixes

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -61,6 +61,10 @@ img {
 	border-color: var(--bs-primary) !important;
 }
 
+.text-muted {
+	color: rgba(var(--bs-body-color-rgb), .7) !important;
+}
+
 .page-link {
 	background-color: var(--bs-body-bg) !important;
 	color: var(--bs-body-color) !important;
@@ -497,6 +501,7 @@ button.wishlist-heart:hover {
   right: 0;
   border-radius: 10px 10px 10px 0;
   background: rgba(255, 255, 255, .9);
+  color: var(--bs-body-bg);
   padding: 10px;
   width: 50%;
 }
