--- a/public/css/theme-dark.css
+++ b/public/css/theme-dark.css
@@ -12,6 +12,7 @@
 .bg-white,
 .birdypet, .birdypets,
 .birdypet.mini,
+.birdymessage,
 .form-control, .form-check-input, .form-select,
 .dropdown-menu,
 span.twitter-typeahead .tt-menu {
